// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Azure Web App config tests Should match snapshot for application settings 1`] = `
<div>
  <div
    class="nopadLeft accordionSummary"
    id="Stage.stage-0.Service.AzureWebAppConfig"
  >
    <div
      class="subheading"
    >
      pipeline.appServiceConfig.applicationSettings.name
    </div>
    <div>
      <div
        class="Layout--vertical StyledProps--main inputWidth layoutVerticalSpacing"
        data-name="azureWebAppConfig-applicationSettings"
      >
        <div
          class="verticalSpacingInput"
          data-name="connectorRefContainer"
        >
          <div
            class="connectorLabel"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              connector
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                    style="width: 391px;"
                  >
                    <button
                      class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-undefined.applicationSettings.spec.connectorRef"
                      disabled=""
                      style="width: 391px;"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        />
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      disabled=""
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="undefined.applicationSettings.spec.repoName"
            >
              common.repositoryName
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="undefined.applicationSettings.spec.repoName"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="undefined.applicationSettings.spec.branch"
            >
              pipelineSteps.deploy.inputSet.branch
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="undefined.applicationSettings.spec.branch"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="undefined.applicationSettings.spec.paths[0]"
            >
              pipeline.appServiceConfig.applicationSettings.filePath
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="undefined.applicationSettings.spec.paths[0]"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Azure Web App config tests Should match snapshot for connection strings 1`] = `
<div>
  <div
    class="nopadLeft accordionSummary"
    id="Stage.stage-0.Service.AzureWebAppConfig"
  >
    <div
      class="subheading"
    >
      pipeline.appServiceConfig.connectionStrings.name
    </div>
    <div>
      <div
        class="Layout--vertical StyledProps--main inputWidth layoutVerticalSpacing"
        data-name="azureWebAppConfig-connectionStrings"
      >
        <div
          class="verticalSpacingInput"
          data-name="connectorRefContainer"
        >
          <div
            class="connectorLabel"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              connector
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                    style="width: 391px;"
                  >
                    <button
                      class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-undefined.connectionStrings.spec.connectorRef"
                      disabled=""
                      style="width: 391px;"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        />
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      disabled=""
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="undefined.connectionStrings.spec.repoName"
            >
              common.repositoryName
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="undefined.connectionStrings.spec.repoName"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="undefined.connectionStrings.spec.commitId"
            >
              pipelineSteps.commitIdValue
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="undefined.connectionStrings.spec.commitId"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="undefined.connectionStrings.spec.paths[0]"
            >
              pipeline.appServiceConfig.connectionStrings.filePath
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="undefined.connectionStrings.spec.paths[0]"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Azure Web App config tests Should match snapshot for startup script 1`] = `
<div>
  <div
    class="nopadLeft accordionSummary"
    id="Stage.stage-0.Service.AzureWebAppConfig"
  >
    <div
      class="subheading"
    >
      pipeline.startupCommand.name
    </div>
    <div>
      <div
        class="Layout--vertical StyledProps--main inputWidth layoutVerticalSpacing"
        data-name="azureWebAppConfig-startupCommand"
      >
        <div
          class="verticalSpacingInput"
          data-name="connectorRefContainer"
        >
          <div
            class="connectorLabel"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              connector
            </div>
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="bp3-form-group"
                style="margin-bottom: 0px;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                    style="width: 391px;"
                  >
                    <button
                      class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-undefined.startupCommand.spec.connectorRef"
                      disabled=""
                      style="width: 391px;"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        />
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      disabled=""
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="undefined.startupCommand.spec.repoName"
            >
              common.repositoryName
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="undefined.startupCommand.spec.repoName"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="undefined.startupCommand.spec.branch"
            >
              pipelineSteps.deploy.inputSet.branch
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="undefined.startupCommand.spec.branch"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="verticalSpacingInput"
        >
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="undefined.startupCommand.spec.paths[0]"
            >
              pipeline.startupCommand.scriptFilePath
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="undefined.startupCommand.spec.paths[0]"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
